--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -19,27 +19,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Check out code'
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 2
-
-      - name: 'Setup PNPM'
-        uses: pnpm/action-setup@v2.2.4
-        with:
-          version: 7.3.0
-
-      - name: 'Setup Node.js environment'
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'pnpm'
-
-      - name: 'Install dependencies'
-        run: pnpm i
-
-      - name: 'Testing Functions and generating /dist'
-        run: pnpm export:be
+#      - name: 'Check out code'
+#        uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 2
+#
+#      - name: 'Setup PNPM'
+#        uses: pnpm/action-setup@v2.2.4
+#        with:
+#          version: 7.3.0
+#
+#      - name: 'Setup Node.js environment'
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#          cache: 'pnpm'
+#
+#      - name: 'Install dependencies'
+#        run: pnpm i
+#
+#      - name: 'Testing Functions and generating /dist'
+#        run: pnpm export:be
 
       - name: Create .env file
         uses: ozaytsev86/create-env-file@v1
@@ -56,6 +56,8 @@ jobs:
           SERVICE_ACCOUNT_TOKEN_URI: ${{ secrets.SERVICE_ACCOUNT_TOKEN_URI }}
           SERVICE_ACCOUNT_TYPE: ${{ secrets.SERVICE_ACCOUNT_TYPE }}
 
+      - name: 'Checking env file'
+        run: cat .env
 
 #      - name: 'Deploying Functions to Firebase'
 #        uses: w9jds/firebase-action@master
@@ -66,7 +68,10 @@ jobs:
 
       - name: Create SA key
         run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/gcloud.json
+
+      - name: 'Checking gcloud.json file'
+        run: cat $HOME/gcloud.json
 #
-      - name: Deploy Cloud Functions
-        run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && npx firebase-tools deploy --only functions
+#      - name: Deploy Cloud Functions
+#        run: export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud.json && npx firebase-tools deploy --only functions
 #
