--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Create .env file
         uses: SpicyPizza/create-envfile@v1.3
         with:
+          directory: apps/functions
           fail_on_empty: true
           envkey_SENDINGBLUE_API_KEY: ${{ secrets.SENDINGBLUE_API_KEY }}
           envkey_SERVICE_ACCOUNT_AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.SERVICE_ACCOUNT_AUTH_PROVIDER_X509_CERT_URL }}
@@ -73,7 +74,7 @@ jobs:
 #          SERVICE_ACCOUNT_TYPE: ${{ secrets.SERVICE_ACCOUNT_TYPE }}
 #
       - name: 'Checking env file'
-        run: cat .env
+        run: cat apps/functions/.env
 
 #      - name: 'Deploying Functions to Firebase'
 #        uses: w9jds/firebase-action@master
