--- a/.github/workflows/generate-diff-map.yml
+++ b/.github/workflows/generate-diff-map.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
       - name: Executing Diff Map Action
         id: hello
-        # ToDo Change this to a specific version created with a tag
-        uses: cundejo/diff-map@main
+        uses: cundejo/diff-map@v1.0.1
         with:
           who-to-greet: 'Oliver Sosa Cano'
       # Use the output from the `hello` step
